Modified the sign-up button by learning how to round corners and altered the header slightly

--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     <div class="header">
         <div id="logo">Header Logo</div>
         <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
+            <li><a href="#">link one</a></li>
+            <li><a href="#">link two</a></li>
+            <li><a href="#">link three</a></li>
         </ul>
     </div>
 
     <div class="content">
         <div class="awesome">
-            <div id="main-text">This website is awesome</div>
-            <p id="secondary-text">mad ting yeno </p>
-            <button class="sign-up">Sign Up</button>
+            <div class="awesome-text">
+                <div id="main-text">This website is awesome</div>
+                <p id="secondary-text">With a paragraph generator, you’ll be able to select the appropriate paragraph style. With a paragraph generator, instead of looking through a long list of personalized paragraphs, you’ll just pick one and make it personal to you.</p>
+                <button class="sign-up">Sign Up</button>
+            </div>
+            <img src="images/dogs.jpeg" alt="dogs" style="height: auto; width: 600px;">
         </div>
 
         <div class="info">
