Added images to the info section, centered them and aligned the four of them using Flex as well as a border radius, also altered some styling of this section.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 
         <div class="info">
             <div id="info-header">Some random information</div>
+            <div class="info-content">
+                <img src="images/kylo.jpeg" alt="kylo-jpeg" class="info-jpeg">
+                <img src="images/ozzy.jpeg" alt="ozzy-jpeg" class="info-jpeg">
+                <img src="images/leia.jpeg" alt="leia-jpeg" class="info-jpeg">
+                <img src="images/jack.jpeg" alt="jack-jpeg" class="info-jpeg">
+            </div>
         </div>
 
         <div class="quote">
