Completed the information section of the landing page by adding the text underneath the four images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="content">
         <div class="awesome">
             <div class="awesome-text">
-                <div id="main-text">This website is awesome</div>
+                <div id="main-text">This website is not awesome</div>
                 <p id="secondary-text">With a paragraph generator, you’ll be able to select the appropriate paragraph style. With a paragraph generator, instead of looking through a long list of personalized paragraphs, you’ll just pick one and make it personal to you.</p>
                 <button class="sign-up">Sign Up</button>
             </div>
@@ -30,10 +30,25 @@
         <div class="info">
             <div id="info-header">Some random information</div>
             <div class="info-content">
-                <img src="images/kylo.jpeg" alt="kylo-jpeg" class="info-jpeg">
-                <img src="images/ozzy.jpeg" alt="ozzy-jpeg" class="info-jpeg">
-                <img src="images/leia.jpeg" alt="leia-jpeg" class="info-jpeg">
-                <img src="images/jack.jpeg" alt="jack-jpeg" class="info-jpeg">
+                <div>
+                    <img src="images/kylo.jpeg" alt="kylo-jpeg" class="info-jpeg">
+                    <p>Kylo is a red Chow Chow that believes he is perfection and nobody is equal, basically the Homelander of dogs</p>
+                </div>
+
+                <div>
+                    <img src="images/ozzy.jpeg" alt="ozzy-jpeg" class="info-jpeg">
+                    <p>Ozzy, the younger and more wild Chow Chow brother to Kylo. Not as stubborn but slightly more crazy, could say the Black Noir of dogs</p>
+                </div>
+
+                <div>
+                    <img src="images/leia.jpeg" alt="leia-jpeg" class="info-jpeg">
+                    <p>Leia is a English Bulldog bruiser knuckle queen that never failed to make everyone laugh, she will be forever missed</p>
+                </div>
+
+                <div>
+                    <img src="images/jack.jpeg" alt="jack-jpeg" class="info-jpeg">
+                    <p>Jack is a scruffy Jack Russell that loves all the attention he can get, will stare out the window for hours on end</p>
+                </div>  
             </div>
         </div>
 
