Quote section completed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                 <div>
                     <img src="images/ozzy.jpeg" alt="ozzy-jpeg" class="info-jpeg">
-                    <p>Ozzy, the younger and more wild Chow Chow brother to Kylo. Not as stubborn but slightly more crazy, could say the Black Noir of dogs</p>
+                    <p>Ozzy, the younger and more wild Chow Chow brother to Kylo. Not as stubborn but slightly more crazy</p>
                 </div>
 
                 <div>
@@ -53,7 +53,8 @@
         </div>
 
         <div class="quote">
-            <p id="quote-text">Quote here bro</p>
+            <p id="quote-text">"Even the good leaders make poor decisions, it's the best leaders that take responsibility from them." & "Zeus! Your son has returned. I bring the destruction of Olympus!" </p>
+            <p id="quote-name">- Kratos, God of War</p>
         </div>
     </div>
 
