Sign-up section added to landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="awesome">
             <div class="awesome-text">
                 <div id="main-text">This website is not awesome</div>
-                <p id="secondary-text">With a paragraph generator, you’ll be able to select the appropriate paragraph style. With a paragraph generator, instead of looking through a long list of personalized paragraphs, you’ll just pick one and make it personal to you.</p>
+                <p id="secondary-text">With a paragraph generator, you'll be able to select the appropriate paragraph style. With a paragraph generator, instead of looking through a long list of personalized paragraphs, you’ll just pick one and make it personal to you.</p>
                 <button class="sign-up">Sign Up</button>
             </div>
             <img src="images/dogs.jpeg" alt="dogs" style="height: auto; width: 600px;">
@@ -52,9 +52,19 @@
             </div>
         </div>
 
-        <div class="quote">
+        <div class="quote"> 
             <p id="quote-text">"Even the good leaders make poor decisions, it's the best leaders that take responsibility from them." & "Zeus! Your son has returned. I bring the destruction of Olympus!" </p>
             <p id="quote-name">- Kratos, God of War</p>
+        </div>
+
+        <div class="sign-up-section">
+            <div class="sign-up-card">
+                <div class="sign-up-left">
+                    <p class="sign-up-title">Call to Action! It's time!</p>
+                    <p class="sign-up-text">Sign up as Kylo has commanded by clickin the button to the right!</p>
+                </div>
+                <button class="sign-up">Sign Up</button>
+            </div>
         </div>
     </div>
 
