Final tweaks to my landing page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="awesome">
             <div class="awesome-text">
                 <div id="main-text">This website is not awesome</div>
-                <p id="secondary-text">With a paragraph generator, you'll be able to select the appropriate paragraph style. With a paragraph generator, instead of looking through a long list of personalized paragraphs, you’ll just pick one and make it personal to you.</p>
+                <p id="secondary-text">Behold the greatness of my mum's Chow Chows. The red guy is Kylo and the other crazy dude is Ozzy. They are my two little bro's and you'll never find a more stubborn dog breed than the Chow Chow.</p>
                 <button class="sign-up">Sign Up</button>
             </div>
             <img src="images/dogs.jpeg" alt="dogs" style="height: auto; width: 600px;">
@@ -63,7 +63,7 @@
                     <p class="sign-up-title">Call to Action! It's time!</p>
                     <p class="sign-up-text">Sign up as Kylo has commanded by clickin the button to the right!</p>
                 </div>
-                <button class="sign-up">Sign Up</button>
+                <button class="sign-up-button">Sign Up</button>
             </div>
         </div>
     </div>
